--- a/side_left_copyright.css
+++ b/side_left_copyright.css
@@ -1,1 +1,1 @@
-#main:before{content:"unikizwapkizgalaxy"; position: absolute; bottom: 10%;left:-10%; transform: rotate(90deg); position:fixed;opacity: 0.5; font-family: 'Fira Sans'; }
+#main:before{content:"unikiz elements"; position: absolute; bottom: 10%;left:-10%; transform: rotate(90deg); position:fixed;opacity: 0.5; font-family: 'Fira Sans'; }
